refactor after CodeEater video17